--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,44 +1,59 @@
-<?xml version="1.0" encoding="utf-8"?> 
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.ssb.droidsound" android:installLocation="auto"
-	android:versionName="1.3.1" android:versionCode="15">
+	package="com.ssb.droidsound"
+	android:installLocation="auto"
+	android:versionCode="15"
+	android:versionName="1.3.1" >
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
-	<!--  uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />  -->
+	<!-- uses-permission android:name="android.permission.CHANGE_CONFIGURATION" /> -->
 	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 
-	<uses-sdk android:targetSdkVersion="8" android:minSdkVersion="8" />
-	
-	<application android:icon="@drawable/droidsound64x64" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
-		<activity android:name=".PlayerActivity" android:launchMode="singleTop" android:label="@string/app_name">
+	<uses-sdk
+		android:minSdkVersion="8"
+		android:targetSdkVersion="8" />
+
+	<application
+		android:icon="@drawable/droidsound64x64"
+		android:label="@string/app_name"
+		android:theme="@android:style/Theme.NoTitleBar" >
+		<activity
+			android:name=".PlayerActivity"
+			android:label="@string/app_name"
+			android:launchMode="singleTop" >
 			<intent-filter>
 				<action android:name="android.intent.action.SEARCH" />
 			</intent-filter>
-			<meta-data android:name="android.app.searchable" android:resource="@xml/searchable" />
+
+			<meta-data
+				android:name="android.app.searchable"
+				android:resource="@xml/searchable" />
 
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
+
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
+			<intent-filter>
+				<action android:name="android.intent.action.SEND" />
 
-			 <intent-filter>
-                <action android:name="android.intent.action.SEND" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <data android:mimeType="text/plain" />
-            </intent-filter>
+				<category android:name="android.intent.category.DEFAULT" />
 
+				<data android:mimeType="text/plain" />
+			</intent-filter>
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
+
 				<category android:name="android.intent.category.DEFAULT" />
 				<category android:name="android.intent.category.BROWSABLE" />
+
 				<data android:scheme="http" />
 				<data android:scheme="content" />
 				<data android:scheme="file" />
-								
 				<data android:mimeType="audio/prs.sid" />
 				<data android:mimeType="audio/x-sid" />
 				<data android:mimeType="audio/x-mod" />
@@ -57,52 +72,63 @@
 				<data android:mimeType="audio/x-vgz" />
 				<data android:mimeType="application/x-prg" />
 				<data android:mimeType="application/octet-stream" />
-			</intent-filter>		
-
+			</intent-filter>
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
+
 				<category android:name="android.intent.category.DEFAULT" />
-				<category android:name="android.intent.category.BROWSABLE" />				
+				<category android:name="android.intent.category.BROWSABLE" />
+
 				<data android:scheme="http" />
 				<data android:scheme="file" />
-        		<data android:mimeType="*/*" />
-        		<data android:pathPattern=".*\\.mod" />
-        		<data android:pathPattern=".*\\..*\\.mod" />
-        		<data android:pathPattern=".*\\.gbs" />
-        		<data android:pathPattern=".*\\..*\\.gbs" />
-        		<data android:pathPattern=".*\\.sid" />
-        		<data android:pathPattern=".*\\..*\\.sid" />
-        		<data android:pathPattern=".*\\.xm" />
-        		<data android:pathPattern=".*\\..*\\.xm" />
-        		<data android:host="*" />
-			</intent-filter>		
-			
-						<intent-filter>				
+				<data android:mimeType="*/*" />
+				<data android:pathPattern=".*\\.mod" />
+				<data android:pathPattern=".*\\..*\\.mod" />
+				<data android:pathPattern="mod\\..*" />
+				<data android:pathPattern=".*\\.gbs" />
+				<data android:pathPattern=".*\\..*\\.gbs" />
+				<data android:pathPattern=".*\\.sid" />
+				<data android:pathPattern=".*\\..*\\.sid" />
+				<data android:pathPattern=".*\\.spc" />
+				<data android:pathPattern=".*\\..*\\.spc" />
+				<data android:pathPattern=".*\\.nsf" />
+				<data android:pathPattern=".*\\..*\\.nsf" />
+				<data android:pathPattern=".*\\.nsfe" />
+				<data android:pathPattern=".*\\..*\\.nsfe" />
+				<data android:pathPattern=".*\\.rsn" />
+				<data android:pathPattern=".*\\..*\\.rsn" />
+				<data android:pathPattern=".*\\.psf" />
+				<data android:pathPattern=".*\\..*\\.psf" />
+				<data android:pathPattern=".*\\.xm" />
+				<data android:pathPattern=".*\\..*\\.xm" />
+				<data android:host="*" />
+			</intent-filter>
+			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
+
 				<category android:name="android.intent.category.DEFAULT" />
+
 				<data android:scheme="file" />
 				<data android:mimeType="application/zip" />
 			</intent-filter>
-
-
 		</activity>
-		
-		<receiver android:name=".service.RemoteControlReceiver">
-    		<intent-filter>
-        		<action android:name="android.intent.action.MEDIA_BUTTON" />
-    		</intent-filter>
+
+		<receiver android:name=".service.RemoteControlReceiver" >
+			<intent-filter>
+				<action android:name="android.intent.action.MEDIA_BUTTON" />
+			</intent-filter>
 		</receiver>
-		
-		<service android:name=".service.PlayerService"/>
-		
+
+		<service android:name=".service.PlayerService" />
+
 		<activity android:name=".SettingsActivity" />
 		<activity android:name=".HelpActivity" />
-		
+
 		<!-- provider android:name="com.ssb.droidsound.provider.SongProvider" android:authorities="com.ssb.droidsound.provider" / -->
-		
-		<meta-data android:name="android.app.default_searchable" android:value=".PlayerActivity" />
-		
+
+		<meta-data
+			android:name="android.app.default_searchable"
+			android:value=".PlayerActivity" />
 	</application>
 
-
-</manifest> 
+</manifest>
