--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.ssb.droidsound"
 	android:installLocation="auto"
-	android:versionCode="17"
-	android:versionName="1.4" >
+	android:versionCode="18"
+	android:versionName="1.4.1" >
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<!-- <uses-permission android:name="android.permission.WAKE_LOCK" /> -->
@@ -102,7 +102,9 @@
 				<data android:pathPattern=".*\\..*\\.psf" />
 				<data android:pathPattern=".*\\.xm" />
 				<data android:pathPattern=".*\\..*\\.xm" />
-				<data android:host="*" />
+				<data android:pathPattern=".*\\.m3u" />
+				<data android:pathPattern=".*\\..*\\.m3u" />
+								<data android:host="*" />
 			</intent-filter>
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
@@ -114,13 +116,13 @@
 			</intent-filter>
 		</activity>
 
-		<receiver android:name=".service.RemoteControlReceiver" android:process=":player" >
+		<receiver android:name=".service.RemoteControlReceiver" >
 			<intent-filter>
 				<action android:name="android.intent.action.MEDIA_BUTTON" />
 			</intent-filter>
 		</receiver>
 
-		<service android:name=".service.PlayerService" android:process=":player" />
+		<service android:name=".service.PlayerService" />
 
 		<activity android:name=".SettingsActivity" />
 		<activity android:name=".HelpActivity" />
