--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,7 +25,7 @@
 		<activity
 			android:name=".PlayerActivity"
 			android:label="@string/app_name"
-			android:launchMode="singleTop" >
+			android:launchMode="singleTask" >
 			<intent-filter>
 				<action android:name="android.intent.action.SEARCH" />
 			</intent-filter>
