--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,11 +6,9 @@
 	android:versionName="1.4.2" >
 
 	<uses-permission android:name="android.permission.INTERNET" />
-	<!-- <uses-permission android:name="android.permission.WAKE_LOCK" /> -->
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
-	<!-- uses-permission android:name="android.permission.CHANGE_CONFIGURATION" /> -->
 	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 
 	<uses-sdk
@@ -23,7 +21,7 @@
 		androidXdebuggable="false"
 		android:theme="@android:style/Theme.NoTitleBar" >
 		<activity
-			android:name=".PlayerActivity"
+			android:name="com.ssb.droidsound.PlayerActivity"
 			android:label="@string/app_name"
 			android:launchMode="singleTask" >
 			<intent-filter>
@@ -104,7 +102,7 @@
 				<data android:pathPattern=".*\\..*\\.xm" />
 				<data android:pathPattern=".*\\.m3u" />
 				<data android:pathPattern=".*\\..*\\.m3u" />
-								<data android:host="*" />
+				<data android:host="*" />
 			</intent-filter>
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
@@ -121,7 +119,7 @@
 				<action android:name="android.intent.action.MEDIA_BUTTON" />
 			</intent-filter>
 		</receiver>
-
+		
 		<service android:name=".service.PlayerService" />
 
 		<activity android:name=".SettingsActivity" />
