--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.ssb.droidsound"
 	android:installLocation="auto"
-	android:versionCode="19"
-	android:versionName="1.4.2" >
+	android:versionCode="20"
+	android:versionName="1.5rc1" >
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
