--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.ssb.droidsound"
 	android:installLocation="auto"
-	android:versionCode="20"
-	android:versionName="1.5rc1" >
+	android:versionCode="21"
+	android:versionName="1.5rc2" >
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -111,22 +111,22 @@
 			</intent-filter>
 		</activity>
 
-		<receiver android:name=".service.RemoteControlReceiver" >
+		<receiver android:name="com.ssb.droidsound.service.RemoteControlReceiver" >
 			<intent-filter>
 				<action android:name="android.intent.action.MEDIA_BUTTON" />
 			</intent-filter>
 		</receiver>
 		
-		<service android:name=".service.PlayerService" />
+		<service android:name="com.ssb.droidsound.service.PlayerService" />
 
-		<activity android:name=".SettingsActivity" />
-		<activity android:name=".HelpActivity" />
+		<activity android:name="com.ssb.droidsound.SettingsActivity" />
+		<activity android:name="com.ssb.droidsound.HelpActivity" />
 
 		<!-- provider android:name="com.ssb.droidsound.provider.SongProvider" android:authorities="com.ssb.droidsound.provider" / -->
 
 		<meta-data
 			android:name="android.app.default_searchable"
-			android:value=".PlayerActivity" />
+			android:value="com.ssb.droidsound.PlayerActivity" />
 	</application>
 
 </manifest>
