--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.ssb.droidsound"
 	android:installLocation="auto"
-	android:versionCode="22"
-	android:versionName="1.5" >
+	android:versionCode="23"
+	android:versionName="1.5b" >
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -18,7 +18,6 @@
 	<application
 		android:icon="@drawable/droidsound64x64"
 		android:label="@string/app_name"
-		android:debuggable="false"
 		android:theme="@android:style/Theme.NoTitleBar" >
 		<activity
 			android:name="com.ssb.droidsound.PlayerActivity"
